<resources>
    <string name="app_name" translatable="false">FuturaScanner</string>
    <string name="expected_amount">Expected amount</string>
    <string name="add">Add</string>
    <string name="block_number">Block-Number</string>
    <string name="scan">Scan</string>
    <string name="update">Update</string>
    <string name="device_number">Devicenumber</string>
    <string name="server_ip_address">Server IP-Address</string>
    <string name="branch">Branch</string>
    <string name="date">Date</string>
    <string name="sync_data">Sync data</string>
    <string name="delete_local_data">Delete local data</string>
    <string name="server">Server</string>
    <string name="item_count">Amount of items</string>
    <string name="check_connection">Check the connection</string>
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="edit_block">Edit block</string>
    <string name="add_ean">Add EAN</string>
    <string name="enter_ean">Enter EAN</string>
    <string name="add_block">Add block</string>
    <string name="confirm_delete_of_item">Confirm deletion of the item</string>
    <string name="confirm_delete_of_block">Confirm deletion of the block</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="numeric_value_required">A numeric value is required</string>
    <string name="valid_ip_required">A valid ip-address is required</string>
    <string name="valid_branch_required">A valid branch-number is required</string>
    <string name="valid_date_required">A valid date is required</string>
    <string name="block_number_taken">This block number is already in use</string>
</resources>