<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scan">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="ch.noebuerki.futurascanner.ui.overview.OverviewFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/navigation_sync"
        android:name="ch.noebuerki.futurascanner.ui.sync.SyncFragment"
        android:label="@string/sync"
        tools:layout="@layout/fragment_sync" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ch.noebuerki.futurascanner.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />


</navigation>