<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/update"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_field" />

    <TextView
        android:id="@+id/device_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/device_number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/device_number_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto_mono"
        android:inputType="number"
        android:lines="1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/device_number_text"
        app:layout_constraintStart_toStartOf="@+id/device_number_text"
        app:layout_constraintTop_toBottomOf="@+id/device_number_text" />

    <TextView
        android:id="@+id/server_ip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_mono"
        android:singleLine="true"
        android:text="@string/server_ip_address"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_number_field" />

    <EditText
        android:id="@+id/server_ip_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto_mono"
        android:inputType="number|numberDecimal"
        android:digits="0123456789."
        android:lines="1"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/server_ip_text"
        app:layout_constraintStart_toStartOf="@+id/server_ip_text"
        app:layout_constraintTop_toBottomOf="@+id/server_ip_text" />

    <TextView
        android:id="@+id/branch_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/branch"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/server_ip_field" />

    <EditText
        android:id="@+id/branch_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto_mono"
        android:inputType="number"
        android:lines="1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/branch_text"
        app:layout_constraintStart_toStartOf="@+id/branch_text"
        app:layout_constraintTop_toBottomOf="@+id/branch_text" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/date"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branch_field" />

    <EditText
        android:id="@+id/date_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto_mono"
        android:inputType="number|numberDecimal"
        android:digits="0123456789."
        android:lines="1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/date_text"
        app:layout_constraintStart_toStartOf="@+id/date_text"
        app:layout_constraintTop_toBottomOf="@+id/date_text" />

</androidx.constraintlayout.widget.ConstraintLayout>